[reledit] Fix reledit icons jumpiness (closes #4106867)
Introduce an "invisible" class (copied verbatim from Bootstrap) that
only sets the "visibility" property. "display: none" is the reason for
the whole jumpiness as it actually detaches the element from the
rendered layout. "visibility: hidden" only makes it transparent while
keeping its original box properties (width, height, etc).

--HG--
branch : stable

--- a/web/data/cubicweb.css
+++ b/web/data/cubicweb.css
@@ -204,6 +204,11 @@ hr.boxSeparator{
 }
 
 /* copied verbatim from bootstrap 3.0 */
+.invisible {
+  visibility: hidden;
+}
+
+/* copied verbatim from bootstrap 3.0 */
 .list-unstyled {
   padding-left: 0;
   list-style: none;
